[package]
name = "rsa_utils"
version = "0.1.0"
edition = "2021"
description = "utils for rsa_rs"
repository = "https://github.com/leninRessurect/rsa_utils"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa_rs = "0.1.5"
